Bugfix: word-wrap: break-word & word-break:break-all

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -56,3 +56,5 @@ body
 	text-rendering: optimizeLegibility
 	font-family: Roboto,Helvetica Neue,Helvetica,Arial,sans-serif
 	line-height: 1.5
+	word-wrap: break-word
+	word-break: break-all
